# lrdp

./: README.md  pyproject.toml
lrdp/: config.py  db.py  dbcreator.py  feedgen.py
tests/: test_dbcreator.py  test_feedgen.py
