[tool.poetry]
name = "lrdp"
version = "0.2.0"
description = "Podcast site generator"
authors = ["Aurelien Gateau <mail@agateau.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.7"
podgen = "^1.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.930"
types-PyYAML = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbcreator = "lrdp.dbcreator:main"
feedgen = "lrdp.feedgen:main"
